tests/error/error.gw
// [contains] rigth-side operand is not mutable
Gain a @=> dac;
